Added Hobby files for Onion

--- a/CVproject.api/appsettings.json
+++ b/CVproject.api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WorkConnection": "Data Source=(localdb)\\TestInstance;Initial Catalog=!!!{ADD DB};Integrated Security=True;Encrypt=False;Connect Timeout=30;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "HomeConnection": "Data Source=ASIS_DESKI\\SQLEXPRESS;Initial Catalog=CVapiDB;Integrated Security=True;Encrypt=False;Connect Timeout=30;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "AllowedHosts": "*"
 }
+//todo ADD DB
