Refactor project structure and update controllers
Renamed CVproject.api.csproj to API.csproj and updated CVproject.sln. Removed WeatherForecastController and WeatherForecast class. Added authorization to HobbyController's Delete method. Updated HobbyRepository to throw DatabaseConnectionException if context is null. Simplified JsonPatchDocument creation and added authorization header in HobbyControllerIntegration test. Replaced FluentAssertions with AwesomeAssertions in Tests.csproj. Added TearDown method in HobbyRepositoryTest. Added custom exceptions in DomainException.cs and InfrastructureException.cs.

--- a/Tests1/Tests.csproj
+++ b/Tests1/Tests.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" Version="8.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\CVproject.api\CVproject.api.csproj" />
+    <ProjectReference Include="..\CVproject.api\API.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
