Added intergration tests

--- a/CVproject.api/Properties/launchSettings.json
+++ b/CVproject.api/Properties/launchSettings.json
@@ -21,6 +21,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Testing": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Testing"
+      }
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
